<resources>
    <string name="app_name">StockManagement</string>
    <string name="email_phone">Email / phone</string>
    <string name="email_phone_input">Email / phone</string>
    <string name="password">Password</string>
    <string name="password_input">Password</string>
    <string name="login">Login</string>
    <string name="menu_dashboard">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_suppliers">Suppliers</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_stock_management">Stock</string>
    <string name="low_stock_items">Low stock items</string>
    <string name="stock">Stock:</string>
    <string name="min_stock">Min. stock:</string>
    <string name="no_low_stock_items">No low stock items</string>
    <string name="no_recent_transactions">No recent transactions</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="qty">Qty:</string>
    <string name="type">Type:</string>
    <string name="price">Price:</string>
    <string name="category">Category:</string>
    <string name="supplier">Supplier:</string>
    <string name="no_products_found">No products found</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="barcode">Barcode</string>
    <string name="current_stock">Current stock</string>
    <string name="minimum_stock">Minimum stock</string>
    <string name="save">Save</string>
    <string name="product_save_success">Product saved successfully!</string>
    <string name="add_product">Add product</string>
    <string name="supplier_not_selected">Please select the product supplier!</string>
    <string name="no_supplier_found">No supplier found</string>
    <string name="add_supplier">Add supplier</string>
    <string name="contact_person">Contact person</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="notes">Notes</string>
    <string name="product_not_selected">Please select a product!</string>
    <string name="type_not_selected">Please select stock operation!</string>
    <string name="qty_not_selected">Please insert a quantity!</string>
    <string name="transaction_save_success">Transaction saved successfully!</string>
    <string name="operation">Operation</string>
    <string name="scan_barcode">"Scan a barcode"</string>
</resources>