<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/menu_dashboard" />
    <item
        android:id="@+id/productListFragment"
        android:icon="@drawable/ic_products"
        android:title="@string/menu_products" />
    <item
        android:id="@+id/supplierListFragment"
        android:icon="@drawable/ic_supplier"
        android:title="@string/menu_suppliers" />
    <item
        android:id="@+id/transactionListFragment"
        android:icon="@drawable/ic_transactions"
        android:title="@string/menu_transactions" />
    <item
        android:id="@+id/stockManagementFragment"
        android:icon="@drawable/ic_stock"
        android:title="@string/menu_stock_management" />
</menu>