<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/margin_large">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:errorEnabled="true"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textLongMessage"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvPrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvCategory">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/barcode"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvSupplier"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvBarcode">

            <AutoCompleteTextView
                android:id="@+id/acSupplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvCurrentStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvSupplier">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCurrentStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/current_stock"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvMinStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvCurrentStock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMinStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/minimum_stock"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ro.alingrosu.stockmanagement.presentation.custom.LoadingButton
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMinStock" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>