<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/margin_large">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvProduct"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintEnd_toStartOf="@id/buttonScan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/acProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/buttonScan"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_barcode_scanner"
            app:layout_constraintBottom_toBottomOf="@id/tvProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvProduct" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvOperation"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintTop_toBottomOf="@id/tvProduct">

            <AutoCompleteTextView
                android:id="@+id/acOperation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/operation"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintTop_toBottomOf="@id/tvOperation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintTop_toBottomOf="@id/tvQuantity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes"
                android:inputType="textLongMessage"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ro.alingrosu.stockmanagement.presentation.custom.LoadingButton
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNotes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>