<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Product Name" />

        <TextView
            android:id="@+id/tvProductDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductName"
            tools:text="Product Description" />

        <TextView
            android:id="@+id/tvCategoryLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/category"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvCategoryValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductDescription" />

        <TextView
            android:id="@+id/tvCategoryValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCategoryLabel"
            app:layout_constraintTop_toTopOf="@id/tvCategoryLabel"
            tools:text="Dummy category" />

        <TextView
            android:id="@+id/tvSupplierLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/supplier"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvSupplierValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCategoryLabel" />

        <TextView
            android:id="@+id/tvSupplierValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvSupplierLabel"
            app:layout_constraintTop_toTopOf="@id/tvSupplierLabel"
            tools:text="Dummy supplier" />

        <TextView
            android:id="@+id/tvPriceLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvPriceValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSupplierLabel" />

        <TextView
            android:id="@+id/tvPriceValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
            app:layout_constraintTop_toTopOf="@id/tvPriceLabel"
            tools:text="20.59" />

        <LinearLayout
            android:id="@+id/layoutStock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/layoutMinStock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPriceLabel">

            <TextView
                android:id="@+id/tvStockLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvStockCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="30pcs" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMinStock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutStock"
            app:layout_constraintTop_toBottomOf="@id/tvPriceLabel">

            <TextView
                android:id="@+id/tvMinStockLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_stock"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvMinStockCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:textSize="16sp"
                tools:text="30pcs" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>